# publish-crates

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .goreleaser.yaml  .typos.toml  Cargo.toml  Dockerfile  README.md  TODO.md  action.ts  action.yml  clippy.toml  mise.toml  package.json  release.sh  taskfile.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yaml  lint.yaml  local.yml  release.yaml  release.yml  test-action.yaml  test.yaml  test.yml
action/: Cargo.toml
action/src/: main.rs
actions/: Cargo.toml
actions-derive/: Cargo.toml
actions-derive/src/: lib.rs
actions/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/cargo-publish-crates/: Cargo.toml
crates/cargo-publish-crates/src/: main.rs
crates/publish-crates/: Cargo.toml
crates/publish-crates-action/: Cargo.toml
crates/publish-crates-action/src/: main.rs
crates/publish-crates/src/: lib.rs
docker/: build_env.dockerfile
src/: lib.rs
