[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
version = "0.0.28"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Publish rust crates with support for cargo workspaces"
homepage = "https://github.com/romnn/publish-crates"
repository = "https://github.com/romnn/publish-crates"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
strip = true

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"

# concurrency
parking_lot = "0"

# github actions
action-core = "0"

# testing
similar-asserts = "1"
itertools = "0"
