[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.metadata.cargo-fc]
install_missing_targets = true
dedupe = true
aggregate_targets = false
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-gnu",
  "aarch64-apple-darwin",
]

[workspace.package]
version = "0.0.29"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Publish rust crates with support for cargo workspaces"
homepage = "https://github.com/romnn/publish-crates"
repository = "https://github.com/romnn/publish-crates"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
strip = true

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"

# concurrency
parking_lot = "0"

# github actions
action-core = "0"

# testing
similar-asserts = "1"
itertools = "0"

[workspace.lints.rust]
warnings = { level = "warn", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"
await_holding_lock = "deny"
allow_attributes_without_reason = "deny"

map_unwrap_or = "allow"
assigning_clones = "allow"
struct_excessive_bools = "allow"
