[package]
name = "action"
version = "0.0.7"
edition = "2021"
publish = false

[[bin]]
name = "publish-crates-action"
path = "src/main.rs"

[dependencies]
thiserror = "1"
publish-crates = { path = "../" }
duration-string = "0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0"
actions-toolkit = "0"
actions = { path = "../actions", features = ["derive", "serde"] }

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0"
