[package]
name = "actions"
version = "0.1.0"
edition = "2021"

[features]
default = []

derive = ["dep:actions-derive"]
serde = ["dep:serde", "dep:serde_yaml"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

actions-derive = { path = "../actions-derive", optional = true }
serde = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
