[package]
name = "cargo-publish-crates"
version = "0.0.8"
edition = "2021"
publish = false

[[bin]]
name = "cargo-publish-crates"
path = "src/main.rs"

[dependencies]
publish-crates = { path = "../" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0"
duration-string = "0"
