[package]
name = "cargo-publish-crates"
version = "0.0.10"
edition = "2021"
publish = true

[[bin]]
name = "cargo-publish-crates"
path = "src/main.rs"

[dependencies]
publish-crates = { path = "../" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0"
duration-string = "0"
