[package]
name = "cargo-publish-crates"
version = "0.0.12"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Publish rust crates with support for cargo workspaces"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/publish-crates"
homepage = "https://github.com/romnn/publish-crates"
repository = "https://github.com/romnn/publish-crates"
categories = [
  "command-line-utilities",
  "development-tools::cargo-plugins",
]
keywords = [
  "crates.io",
  "ci-cd",
  "publish",
  "cli",
]
exclude = []

[[bin]]
name = "cargo-publish-crates"
path = "src/main.rs"

[dependencies]
publish-crates = { path = "../" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0"
duration-string = "0"
