[package]
name = "cargo-publish-crates"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/cargo-publish-crates"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

categories = [
  "command-line-utilities",
  "development-tools::cargo-plugins",
]
keywords = [
  "crates-io",
  "ci-cd",
  "publish",
  "cli",
]
exclude = []

[[bin]]
name = "cargo-publish-crates"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true

# argument parsing
clap = { version = "4", features = ["derive", "env", "string"] }
duration-string = "0"

# async runtime
tokio = { version = "1", features = ["full"] }

publish-crates = { path = "../publish-crates/" }
